# TaskManagement

./: .gitignore  README.md
task_manager/: README.md  docker-compose.yml  render.yaml
task_manager/.github/workflows/: frontend.yml
task_manager/backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  index.py  openapi.json  pyproject.toml  requirements.txt
task_manager/backend/.github/workflows/: ci.yml
task_manager/backend/alembic/: env.py
task_manager/backend/alembic/versions/: 001_initial_schema.py  59d524ca2a61_add_advanced_task_features.py
task_manager/backend/app/: __init__.py
task_manager/backend/app/core/: cache.py  config.py  exceptions.py  logging.py  middleware.py  security.py
task_manager/backend/app/db/: base.py  database.py  session.py
task_manager/backend/app/dependencies/: __init__.py  auth.py  database.py
task_manager/backend/app/models/: __init__.py  project.py  refresh_token.py  task.py  user.py
task_manager/backend/app/observability/: __init__.py  metrics.py  tracing.py
task_manager/backend/app/repositories/: __init__.py  base.py  task_repository.py  user_repository.py
task_manager/backend/app/routers/: __init__.py  auth.py  health.py  tasks.py  users.py
task_manager/backend/app/schemas/: __init__.py  auth.py  common.py  task.py  user.py
task_manager/backend/app/services/: __init__.py  auth_service.py  task_service.py  user_service.py
task_manager/backend/app/utils/: filters.py  pagination.py  search.py
task_manager/backend/tests/: __init__.py  conftest.py
task_manager/backend/tests/e2e/: __init__.py  test_auth.py  test_tasks.py  test_users.py
task_manager/backend/tests/integration/: test_repositories.py
task_manager/backend/tests/unit/: test_schemas.py  test_security.py  test_services.py  test_utils.py
task_manager/frontend/: Dockerfile  next.config.ts  orval.config.ts  package-lock.json  package.json
task_manager/frontend/src/: middleware.ts
task_manager/frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
task_manager/frontend/src/components/: ThemeToggle.tsx  providers.tsx
(+26 files in other folders)
